crates/vexor-compiler/tests/golden/error/output/list_range.err
parse error at line 4, column 16
  |
4 | val zs = [1,2,3..10]
  |                ^
invalid list
expected `]`, comma-separated list, range `[x..y]`, range `[x,y..z]`